2005-04-20  Brian Wellington <bwelling@xbill.org>
	* client/gtk/frontend.h, client/gtk/gui.c, client/gtk/guimap.c,
	client/gtk/guimap.h, client/gtk/player.c, common/gtk/Makefile.am,
	common/gtk/colors.c, common/gtk/colors.h: Move non-client-specific
	code to common/gtk.

2005-04-20  0.9.9  Roland Clobus <rclobus@bigfoot.com>
	* rules.make, server/gnocatan-server-console.c: Add
	G_DISABLE_DEPRECATED, and replace the old functions.
	* server/gtk/gnocatan-server-gtk.c: Replace libgnomeui calls with
	libgnome and Gtk+ calls.
	* client/common/callback.c, client/gtk/gui.c, client/gtk/interface.c:
	No direct build of a city in the client. First a settlement has to be
	built.
	* common/network.c, meta-server/gnocatan-meta-server.c: Added code
	that will allow the tarball to be built under Cygwin. The client uses
	IPv4 functions, the server will not create listening sockets, and the
	metaserver will not create new games.

2005-04-19  Brian Wellington <bwelling@xbill.org>
	* configure.ac, Makefile.am, editor: Add gnocatan-editor.

2005-04-18  Brian Wellington <bwelling@xbill.org>
	* client/gtk/plenty.c: Remove duplicated and deprecated code
	by using the resource table widget.
	* server/gnocatan-server-console.c, server/player.c,
	server/server.c, server/server.h, server/gtk/gnocatan-server-gtk.c:
	Add the ability to disable AI chatting from gnocatan-server-gtk.
	* client/gtk/polygon.[ch], client/gtk/theme.[ch],
	client/gtk/Makefile.am, common/gtk/polygon.[ch],
	common/gtk/theme.[ch], common/gtk/Makefile.am: Move theme and polygon
	code from client/gtk to common/gtk.
	* client/ai/greedy.c: The AI can now play monopoly cards.

2005-04-17  Stephen Jacob <sj@sjacob.org>
	* client/callback.h, client/ai/greedy.c, client/common/callback.c,
	client/common/player.c, client/gtk/player.c: The AI now holds VP
	dev cards until it has enough points to win.

2005-04-14  Brian Wellington <bwelling@xbill.org>
	* common/game.c, server/pregame.c: Make params_write_file() create a