@@ -25,15 +25,15 @@
 
 /** information about building.  Used for undo */
 typedef struct {
-	BuildType type;			   /**< type of building performed */
-	int x;				   /**< x-pos of hex of build action */
-	int y;				   /**< x-pos of hex of build action */
-	int pos;			   /**< location on hex of build action */
+	BuildType type;        /**< type of building performed */
+	int x;                 /**< x-pos of hex of build action */
+	int y;                 /**< x-pos of hex of build action */
+	int pos;               /**< location on hex of build action */
 	BuildType prev_status; /**< build city without settlement only: previous status of node */
-	gint *cost;	       /**< resources spent */
-	int prev_x;	       /**< moving ships only: previous x hex */
-	int prev_y;	       /**< moving ships only: previous y hex */
-	int prev_pos;	       /**< moving ships only: previous position */
+	const gint *cost;      /**< resources spent */
+	int prev_x;            /**< moving ships only: previous x hex */
+	int prev_y;            /**< moving ships only: previous y hex */
+	int prev_pos;          /**< moving ships only: previous position */
 	/* this is an int, because only the server uses it, and the client
 	 * doesn't know about Players. */
 	int longest_road;      /**< who had the longest road before this build */
